--- a/public/stylesheets/styles.css
+++ b/public/stylesheets/styles.css
@@ -42,7 +42,7 @@ body {
   justify-content: center; }
 
 h1, h2, h3, h4, h5, h6 {
-  color: #ffcc66;
+  color: #ff9933;
   padding: 0 10px;
   background-color: #090909;
   margin: 0;
