More Jade template work. Add Heroku button.

--- a/src/views/layout.jade
+++ b/src/views/layout.jade
@@ -13,16 +13,4 @@ html(lang='en')
 
   body
 
-    #screen
-      #fullscreen
-        header
-          h2.pull-right System Monitor 857
-
-        section#fullscreen-content
-          .federation-logo
-          div(style='margin-bottom: 80px;')
-            h1 Incoming Transmission
-            h3.color6(style='margin-top: 20px;') Starfleet Command &#8226; Authorized access only
-
-        footer
-          h2 Main Bridge
+    block content
