--- a/src/views/layout.jade
+++ b/src/views/layout.jade
@@ -1,16 +1,22 @@
+include mixins
+
 doctype html
 html(lang='en')
   head
     meta(charset='utf-8')
-    meta(http-equiv='X-UA-Compatible', content='IE=edge,chrome=1')
+    meta(http-equiv='X-UA-Compatible', content='IE=edge')
 
     title LCARS
 
     meta(name='description', content='')
-    meta(name='viewport', content='width=device-width, initial-scale=1')
+    meta(name='viewport', content='width=device-width, initial-scale=1, maximum-scale=1.0, user-scalable=no')
 
     link(rel='stylesheet', href='/stylesheets/styles.css')
 
   body
 
     block content
+
+    script(src='/scripts/main.js')
+    script.
+      LCARS.init()
